[gd_scene load_steps=79 format=2]

[ext_resource path="res://Imagens/fase2/bodeShop.png" type="Texture" id=1]
[ext_resource path="res://Fonts/PixelOperator-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://script/Minigame_2-4.gd" type="Script" id=3]
[ext_resource path="res://scenes/Level.tscn" type="PackedScene" id=4]
[ext_resource path="res://Imagens/fase2/background 2-4.png.png" type="Texture" id=5]
[ext_resource path="res://Imagens/botaoVoltar.png" type="Texture" id=6]
[ext_resource path="res://Imagens/botaoVoltarPressionado.png" type="Texture" id=7]
[ext_resource path="res://Imagens/caixaPergunta.png" type="Texture" id=8]
[ext_resource path="res://Imagens/botaoRestart.png" type="Texture" id=9]
[ext_resource path="res://Imagens/caixaDeTexto.png" type="Texture" id=10]
[ext_resource path="res://Imagens/botaoX.png" type="Texture" id=11]
[ext_resource path="res://Imagens/cactoNovo.png" type="Texture" id=12]
[ext_resource path="res://Imagens/fase2/tapioca (2).png" type="Texture" id=13]
[ext_resource path="res://Imagens/fase2/mandioca.png" type="Texture" id=14]
[ext_resource path="res://Imagens/fase2/Cuzcuz.png" type="Texture" id=15]
[ext_resource path="res://Imagens/fase2/Banco-1.png.png" type="Texture" id=16]
[ext_resource path="res://Imagens/fase2/Macaxeira.png" type="Texture" id=17]
[ext_resource path="res://Imagens/fase2/farol.png" type="Texture" id=18]
[ext_resource path="res://Imagens/fase2/answerButton (2).png" type="Texture" id=19]
[ext_resource path="res://Imagens/fase2/pintoDaMadrugada.png" type="Texture" id=20]
[ext_resource path="res://Imagens/fase2/boiBumba.png" type="Texture" id=21]
[ext_resource path="res://Fonts/Stay Pixel DEMO.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://scenes/coin.tscn" type="PackedScene" id=23]
[ext_resource path="res://Imagens/fase2/answerButton (1).png" type="Texture" id=24]
[ext_resource path="res://Imagens/nuvem2-1.png.png" type="Texture" id=25]
[ext_resource path="res://Imagens/fase2/boiCompleto.png" type="Texture" id=26]
[ext_resource path="res://Imagens/fase2/boiChifre.png" type="Texture" id=27]
[ext_resource path="res://scenes/Tela de pontuacao.tscn" type="PackedScene" id=28]
[ext_resource path="res://Imagens/botaoStart.png" type="Texture" id=29]
[ext_resource path="res://Imagens/botaoStartPressionado.png" type="Texture" id=30]
[ext_resource path="res://Imagens/fase2/boiSaia.png" type="Texture" id=31]
[ext_resource path="res://audios/vitoria.wav" type="AudioStream" id=33]

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 318, 318 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 318, 0, 318, 318 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 636, 0, 318, 318 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 0, 318, 318, 318 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 318, 318, 318, 318 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 636, 318, 318, 318 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 0, 636, 318, 318 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 318, 636, 318, 318 )

[sub_resource type="SpriteFrames" id=78]
animations = [ {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 787, 514 )

[sub_resource type="SpriteFrames" id=44]
animations = [ {
"frames": [ SubResource( 79 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=43]
radius = 60.8074
height = 0.0

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="SpriteFrames" id=60]
animations = [ {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="SpriteFrames" id=64]
animations = [ {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="SpriteFrames" id=68]
animations = [ {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 198, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 396, 0, 198, 198 )

[sub_resource type="SpriteFrames" id=52]
animations = [ {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 213, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14.625, 375.75 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16.125, 374 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 195.5, 4.5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 31.3125, 30.3125 )

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 56, 34.5 )

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 100, 33 )

[sub_resource type="RectangleShape2D" id=55]
extents = Vector2( 103, 36.25 )

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 28.5, 124 )

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 100, 100 )

[sub_resource type="DynamicFont" id=80]
font_data = ExtResource( 22 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=20]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 31 )
region = Rect2( 0, 0, 754, 635 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 755, 518 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 26 )
region = Rect2( 0, 0, 814, 616 )

[sub_resource type="SpriteFrames" id=84]
animations = [ {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=25]
size = 200
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 401.0
margin_top = -14.0
margin_right = 519.0
margin_bottom = 801.0
color = Color( 0.854902, 0.745098, 0.627451, 1 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_left = 0.334
anchor_top = 0.104
anchor_right = 0.334
anchor_bottom = 0.104
margin_left = -33.412
margin_top = -62.76
margin_right = 19.588
margin_bottom = 721.24
color = Color( 0.392157, 0.231373, 0.0705882, 1 )

[node name="map_minigame" type="Sprite" parent="."]
position = Vector2( 195.5, 385.548 )
scale = Vector2( 1.94737, 1.94737 )
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 361, 50 )
scale = Vector2( 0.248428, 0.248428 )
frames = SubResource( 78 )
frame = 5
playing = true

[node name="farol" type="Sprite" parent="."]
position = Vector2( 216, 586 )
scale = Vector2( 0.243243, 0.243243 )
texture = ExtResource( 18 )

[node name="Guardasol" type="Sprite" parent="."]
position = Vector2( 226, 248 )
scale = Vector2( 0.209063, 0.209063 )
texture = ExtResource( 12 )

[node name="banco2" type="Sprite" parent="."]
position = Vector2( 300, 56.0001 )
scale = Vector2( 0.225455, 0.209282 )
texture = ExtResource( 16 )

[node name="coin" parent="." instance=ExtResource( 23 )]
position = Vector2( 32, 387 )
scale = Vector2( 0.130943, 0.130943 )
frames = SubResource( 44 )
playing = true

[node name="Area2D" type="Area2D" parent="coin" groups=["coletaveis"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin/Area2D"]
position = Vector2( 7.63696, 0 )
shape = SubResource( 43 )

[node name="coin3" parent="." instance=ExtResource( 23 )]
position = Vector2( 163, 318 )
scale = Vector2( 0.5625, 0.5625 )
frames = SubResource( 60 )
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="coin3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin3/Area2D"]
position = Vector2( 7.63696, 0 )
shape = SubResource( 43 )

[node name="coin4" parent="." instance=ExtResource( 23 )]
position = Vector2( 352, 577 )
scale = Vector2( 0.5625, 0.5625 )
frames = SubResource( 64 )
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="coin4" groups=["desconto", "not-colect"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin4/Area2D"]
position = Vector2( 7.63696, 0 )
shape = SubResource( 43 )

[node name="coin5" parent="." instance=ExtResource( 23 )]
position = Vector2( 160, 652 )
scale = Vector2( 0.5625, 0.5625 )
frames = SubResource( 68 )
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="coin5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin5/Area2D"]
position = Vector2( 7.63696, 0 )
shape = SubResource( 43 )

[node name="coin2" parent="." instance=ExtResource( 23 )]
position = Vector2( 224, 192 )
scale = Vector2( 0.409091, 0.409091 )
frames = SubResource( 52 )
playing = true

[node name="Area2D" type="Area2D" parent="coin2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin2/Area2D"]
position = Vector2( 7.63696, 0 )
shape = SubResource( 43 )

[node name="Fundo" parent="." instance=ExtResource( 4 )]
position = Vector2( 19, 14 )
scale = Vector2( 0.963007, 0.963007 )

[node name="colisionBoard" type="StaticBody2D" parent="."]

[node name="limitadorBorda" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 208, 136 )
shape = SubResource( 7 )

[node name="limitadorBorda2" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 3.375, 382 )
shape = SubResource( 6 )

[node name="limitadorBorda3" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 417, 371 )
shape = SubResource( 8 )

[node name="limitadorBorda4" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 205, 689 )
shape = SubResource( 9 )

[node name="obstaculo" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 96.6875, 651.375 )
shape = SubResource( 17 )

[node name="obstaculo2" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 100, 177.688 )
shape = SubResource( 17 )

[node name="obstaculo3" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 227, 584 )
shape = SubResource( 17 )

[node name="obstaculo7" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 31, 384 )
shape = SubResource( 17 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 72, 453.5 )
shape = SubResource( 53 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 300, 455 )
shape = SubResource( 54 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 297, 652.25 )
shape = SubResource( 55 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 99.5, 412 )
shape = SubResource( 56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisionBoard"]
position = Vector2( 300, 316 )
shape = SubResource( 69 )

[node name="Button2" type="TextureButton" parent="."]
margin_left = 17.0
margin_top = 10.0
margin_right = 212.0
margin_bottom = 205.0
rect_rotation = 180.0
rect_scale = Vector2( -0.279999, -0.279999 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
texture_focused = ExtResource( 7 )

[node name="BodeShop" type="Sprite" parent="."]
position = Vector2( 296, 328 )
scale = Vector2( 0.315833, 0.315833 )
texture = ExtResource( 1 )

[node name="popWarn" type="Sprite" parent="."]
visible = false
position = Vector2( 233.25, 260 )
scale = Vector2( 1.65, 1.65 )
texture = ExtResource( 25 )

[node name="text" type="Label" parent="popWarn"]
margin_left = -60.1515
margin_top = -23.6363
margin_right = 43.8485
margin_bottom = 7.36366
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 80 )
text = "Pegue este item por último"
autowrap = true

[node name="TextureButton" type="TextureButton" parent="popWarn"]
margin_left = 28.3334
margin_right = 442.333
margin_bottom = 365.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 11 )

[node name="WindowDialog" type="Sprite" parent="."]
position = Vector2( 220, 377 )
scale = Vector2( 0.559091, 0.559091 )
texture = ExtResource( 8 )

[node name="RichTextLabel" type="Label" parent="WindowDialog"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = -0.26441
anchor_top = -8.06808e-05
anchor_right = 0.12953
anchor_bottom = 0.10901
margin_left = -54.9723
margin_top = -54.9645
margin_right = -82.9726
margin_bottom = -39.9644
rect_scale = Vector2( 2, 2 )
theme = SubResource( 3 )
custom_fonts/font = SubResource( 20 )
text = "
"
autowrap = true

[node name="closePopup" type="TextureButton" parent="WindowDialog"]
margin_left = 189.655
margin_top = 58.7932
margin_right = 603.655
margin_bottom = 423.793
rect_scale = Vector2( 0.279886, 0.279886 )
texture_normal = ExtResource( 11 )

[node name="restart" type="TextureButton" parent="WindowDialog"]
margin_left = 127.069
margin_top = 68.2759
margin_right = 745.069
margin_bottom = 686.276
rect_scale = Vector2( 0.123529, 0.123529 )
texture_normal = ExtResource( 9 )

[node name="Node2D" parent="WindowDialog" instance=ExtResource( 28 )]
position = Vector2( -277.236, -110.894 )

[node name="Next" type="TextureButton" parent="WindowDialog"]
margin_left = 202.114
margin_top = 69.7561
margin_right = 793.114
margin_bottom = 660.756
rect_scale = Vector2( 0.132837, 0.132837 )
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )

[node name="buttonAnswer1" type="TextureButton" parent="WindowDialog"]
margin_left = -214.634
margin_top = 198.537
margin_right = -82.6341
margin_bottom = 330.537
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 19 )

[node name="textAnswer1" type="Label" parent="WindowDialog/buttonAnswer1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = -0.26441
anchor_top = -8.06808e-05
anchor_right = 0.12953
anchor_bottom = 0.10901
margin_left = 70.6745
margin_top = 28.6285
margin_right = 58.6744
margin_bottom = 52.2285
rect_scale = Vector2( 2, 2 )
theme = SubResource( 3 )
custom_fonts/font = SubResource( 20 )
text = "24"
autowrap = true

[node name="buttonAnswer2" type="TextureButton" parent="WindowDialog"]
margin_left = 19.6748
margin_top = 198.537
margin_right = 151.675
margin_bottom = 330.537
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 19 )

[node name="textAnswer2" type="Label" parent="WindowDialog/buttonAnswer2"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = -0.26441
anchor_top = -8.06808e-05
anchor_right = 0.12953
anchor_bottom = 0.10901
margin_left = 63.52
margin_top = 28.6285
margin_right = 51.5199
margin_bottom = 52.2285
rect_scale = Vector2( 2, 2 )
theme = SubResource( 3 )
custom_fonts/font = SubResource( 20 )
text = "27"
autowrap = true

[node name="buttonAnswer3" type="TextureButton" parent="WindowDialog"]
margin_left = -214.634
margin_top = 391.707
margin_right = -82.6341
margin_bottom = 523.707
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 19 )

[node name="textAnswer3" type="Label" parent="WindowDialog/buttonAnswer3"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = -0.26441
anchor_top = -8.06808e-05
anchor_right = 0.12953
anchor_bottom = 0.10901
margin_left = 70.6745
margin_top = 30.4171
margin_right = 58.6744
margin_bottom = 54.0172
rect_scale = Vector2( 2, 2 )
theme = SubResource( 3 )
custom_fonts/font = SubResource( 20 )
text = "14"
autowrap = true

[node name="buttonAnswer4" type="TextureButton" parent="WindowDialog"]
margin_left = 19.6748
margin_top = 391.707
margin_right = 151.675
margin_bottom = 523.707
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 19 )

[node name="textAnswer4" type="Label" parent="WindowDialog/buttonAnswer4"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = -0.26441
anchor_top = -8.06808e-05
anchor_right = 0.12953
anchor_bottom = 0.10901
margin_left = 50.9997
margin_top = 35.7832
margin_right = 48.9995
margin_bottom = 59.3833
rect_scale = Vector2( 2, 2 )
theme = SubResource( 3 )
custom_fonts/font = SubResource( 20 )
text = "122"
autowrap = true

[node name="boiBumba" type="AnimatedSprite" parent="WindowDialog"]
visible = false
position = Vector2( -10.7318, -330.894 )
scale = Vector2( 0.662602, 0.662602 )
frames = SubResource( 84 )
frame = 1
playing = true

[node name="restart" type="TextureButton" parent="."]
margin_left = 86.0
margin_top = 5.0
margin_right = 704.0
margin_bottom = 623.0
rect_scale = Vector2( 0.071633, 0.071633 )
texture_normal = ExtResource( 9 )

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )

[node name="Contador" type="Sprite" parent="."]
position = Vector2( 233, 31 )
scale = Vector2( 0.160462, 0.252322 )
texture = ExtResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="Contador"]
margin_left = -211.888
margin_top = -87.1902
margin_right = 87.1115
margin_bottom = 114.81
rect_scale = Vector2( 1.5, 1 )
custom_fonts/normal_font = SubResource( 25 )
text = "0/5"

[connection signal="arrow2" from="Fundo" to="." method="_on_Fundo_arrow2"]
[connection signal="arrow3" from="Fundo" to="." method="_on_Fundo_arrow3"]
[connection signal="arrow4" from="Fundo" to="." method="_on_Fundo_arrow4"]
[connection signal="showQuestion" from="Fundo" to="." method="_on_Fundo_showQuestion"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="popWarn/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="WindowDialog/closePopup" to="." method="_on_closePopup_pressed"]
[connection signal="pressed" from="WindowDialog/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="WindowDialog/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="WindowDialog/buttonAnswer1" to="." method="_on_buttonAnswer1_pressed"]
[connection signal="pressed" from="WindowDialog/buttonAnswer2" to="." method="_on_buttonAnswer2_pressed"]
[connection signal="pressed" from="WindowDialog/buttonAnswer3" to="." method="_on_buttonAnswer3_pressed"]
[connection signal="pressed" from="WindowDialog/buttonAnswer4" to="." method="_on_buttonAnswer4_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
